--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
